--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">USD</a>
+              <a href="#">GBP</a>
+              <a href="#">EUR</a>
             </div>
           </div>
     </div>
