set class of parts of box and duplicate the box

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    test
-    <div>
+    
+    <div class="exchange-box">
       <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
@@ -20,10 +20,32 @@
       </div>
 
       <div>
-        <input type="number"/>
-        <div>dollar</div>
+        <div class="input-area">
+          <input type="number" />
+          <div>dollar</div>
+        </div>
       </div>
     </div>
+
+    <!-- duplicate the box-->
+    <h1>exchange to</h1>
+    <div class="exchange-box">
+        <div class="dropdown">
+          <button class="dropbtn">Dropdown</button>
+          <div class="dropdown-content">
+            <a href="#">USD</a>
+            <a href="#">GBP</a>
+            <a href="#">EUR</a>
+          </div>
+        </div>
+  
+        <div>
+          <div class="input-area">
+            <input type="number" />
+            <div>dollar</div>
+          </div>
+        </div>
+      </div>
 
     <script src="main.js"></script>
   </body>
