set currency ratio and button actions

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
     <div class="exchange-box">
       <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div class="dropdown-content">
+        <button class="dropbtn" id="from-button">Get Currency</button>
+        <div class="dropdown-content" id="from-currency">
           <a href="#">USD</a>
           <a href="#">GBP</a>
           <a href="#">EUR</a>
@@ -31,8 +31,8 @@
     <h1>exchange to</h1>
     <div class="exchange-box">
         <div class="dropdown">
-          <button class="dropbtn">Dropdown</button>
-          <div class="dropdown-content">
+          <button class="dropbtn" id="to-button">Get Currency</button>
+          <div class="dropdown-content" id="to-currency">
             <a href="#">USD</a>
             <a href="#">GBP</a>
             <a href="#">EUR</a>
